# scraptolib

./: README.md  pyproject.toml
.tests/: main.py
examples/scrapers/: ex_cards_scraper.py  ex_profile_scraper.py
examples/scrapers/mock_data/: href_results.json  profile_results.json
src/: scrapy.cfg
src/scraptolib/: CardsScraper.py  items.py  middlewares.py  pipelines.py  settings.py
src/scraptolib/scrapers/: CardsScraper.py  ProfileScraper.py  Scraper.py
src/scraptolib/utils/: helpers.py
