[project]
name = "scraptolib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "bparent11", email = "benjamin.parent@etu.minesparis.psl.eu" }
]
requires-python = ">=3.11"
dependencies = [
    "pathlib>=1.0.1",
    "scrapy>=2.13.4",
]

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"
